@@ -1,3 +1,3 @@
 from motofit import run
 
-__all__=[run]
+__all__ = [run]
